# ClusteringProblem

./: CMakeLists.txt  Makefile  README.md  kruskall.c  teste.py  testeste33.txt  trab1
data/Entradas novas/: 7.txt  about.txt
data/Saídas/: saida7.txt  saida8.txt
data/outAuto/: 3.txt  4.txt
lib/: distancia.h  entradas.h  kruskall.h  ponto.h  saida.h  unionFind.h
src/: a.out  distancia.c  kruskall.c  main.c  ponto.c  teste  trab1  unionFind.c
src/IO/: entradas.c  saida.c
